force-app/main/default/objects/Tech_Relacion__c/Tech_Relacion__c.object-meta.xml
<CustomObject xmlns=\"http://soap.sforce.com/2006/04/metadata\"><deploymentStatus>Deployed</deploymentStatus><label>Relación Técnica</label><nameField><label>ID Relación</label><type>AutoNumber</type></nameField><pluralLabel>Relaciones Técnicas</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>