force-app/main/default/objects/Tech_Relacion__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Account</relationshipName>
    <type>Lookup</type>
</CustomField>