force-app/main/default/objects/Tech_Relacion__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <label>Beneficiario</label>
    <referenceTo>Beneficiario__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Beneficiario</relationshipName>
    <type>Lookup</type>
</CustomField>