force-app/main/default/objects/Tech_Relacion__c/fields/Contratista__c.field-meta.xml
<CustomField>
    <fullName>Contratista__c</fullName>
    <label>Contratista</label>
    <referenceTo>Contratista__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Contratista</relationshipName>
    <type>Lookup</type>
</CustomField>