force-app/main/default/objects/Tech_Relacion__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>