force-app/main/default/objects/Tech_Relacion__c/fields/Endoso__c.field-meta.xml
<CustomField>
    <fullName>Endoso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endoso</label>
    <referenceTo>Endoso__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Endoso</relationshipName>
    <type>Lookup</type>
</CustomField>