force-app/main/default/objects/Tech_Relacion__c/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fianza</label>
    <referenceTo>Fianza__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Fianza</relationshipName>
    <type>Lookup</type>
</CustomField>