force-app/main/default/objects/Tech_Relacion__c/fields/Fianza_Tech__c.field-meta.xml
<CustomField>
    <fullName>Fianza_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fianza Tech</label>
    <referenceTo>Tech_Fianza__c</referenceTo>
    <relationshipLabel>Relaciones</relationshipLabel>
    <relationshipName>TechRelaciones</relationshipName>
    <type>Lookup</type>
</CustomField>