force-app/main/default/objects/Tech_Relacion__c/fields/Precalificacion__c.field-meta.xml
<CustomField>
    <fullName>Precalificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precalificación</label>
    <referenceTo>Precalificacion__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Precalificacion</relationshipName>
    <type>Lookup</type>
</CustomField>