force-app/main/default/objects/Tech_Relacion__c/fields/Tipo__c.field-meta.xml
<CustomField xmlns=\"http://soap.sforce.com/2006/04/metadata\"><fullName>Tipo__c</fullName><label>Tipo de Relación</label><type>Text</type><length>50</length></CustomField>