force-app/main/default/objects/Tech_Relacion__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <label>Vendedores</label>
    <referenceTo>Vendedores__c</referenceTo>
    <relationshipLabel>Relaciones Técnicas</relationshipLabel>
    <relationshipName>Relaciones_Tecnicas_Vendedor</relationshipName>
    <type>Lookup</type>
</CustomField>